--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   visibility: hidden;
+  -webkit-font-smoothing: antialiased;
 }
 
 :root {
